@@ -1,6 +1,9 @@
 Camlp5 Version 6.02.2:
 ----------------------
 
+* [04 Feb 11] Revised syntax: completed syntax multi labels, ~{x=y; z=t}
+  (equivalent to ~{x=y} ~{z=t}) in patterns (in 6.02.1 was implemented
+  only in expressions).
 * [28 Jan 11] Added installed module 'Reloc': relocations and equalities
   over syntax trees.
 * [26 Jan 11] Fixed bug in camlp5o.opt: did not accept '$' as token.
